--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <div class="yangmaochang" style="font-size:1.5em">
                 <span style="color:rgb(112,173,71)"><b>如何获取羊毛厂优惠？</b></span><br><br>
                 <b class="taobao"
-                    onclick="clip(this)" tb-code="8$Kmwe34zv7kO$:// CZ6135">点击此处复制淘口令</b><br>
+                    onclick="clip(this)" tb-code="8$Kmwe34zv7kO$:// CZ6135">点击此处复制淘口令、淘宝打开</b><br>
                 <span style="color:rgb(112,173,71)">▼</span><br>
                 打开淘宝查看商品<br>
                 <span style="color:rgb(112,173,71)">▼</span><br>
@@ -287,13 +287,13 @@
         <div class="tab-page">
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>金属洞洞板</b></div>
             <div style="font-size:1.2em; "><b>推荐用心在做产品的两个姐妹，她们的洞洞板各有千秋，大家根据自己的需求选择<br>羊毛厂会不定时组织团购活动，欢迎进群！</b></div>
-             <br>
-            <div style="font-size:1.2em; ">1|吉祥如意小裁缝|特点是圆形通用孔洞、细磨砂质地、环保喷塑、和Quadro大板尺寸一致可以严丝合缝链接、对边固定空洞、面板大螺丝固定、整体相对轻便。</div>
+            <br>
+            <div style="font-size:1.2em; ">1|吉祥如意小裁缝|<br>特点是圆形通用孔洞、细磨砂质地、和Quadro大板尺寸完全一致可以严丝合缝链接、对边固定空洞、面板大螺丝固定、整体相对轻便。</div>
             <img src="12dongdongban5.webp" style="width:40%"/>
             <div linka="https://m.tb.cn/h.gncFHcL?tk=uhYx3fMk5OK HU904" class="taobao" onclick="clip(this)">点此复制链接，浏览器地址栏中粘贴打开</div>
-             <br>
             <br>
-            <div style="font-size:1.2em; ">|哎哟妈呀|特点是宜家长孔、喷塑光面、四边固定孔洞、面板大螺丝固定、板面比较厚实。</div>
+            <br>
+            <div style="font-size:1.2em; ">|哎哟妈呀|<br>特点是宜家长孔、光面、适配Quadro及所有国产、四边固定孔洞、面板大螺丝固定、板面比较厚实。</div>
             <img src="12dongdongban4.webp" style="width:45%"/>
             <div tb-code="https://m.tb.cn/h.gnXYrbem9C0XWan?tk=hIoZ3fMHeFY MF3543 " class="taobao" onclick="clip(this)">点此复制链接，打开淘宝App查看商品</div>
             <br>
