--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     </div>
     <div class="tab-page-area">
         <div class="tab-page active">
-            <div style="font-size:1.2em; "><b>如果链接失效，请私信告知领取新的链接，谢谢！。</b></div>
+            
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>商家介绍</b></div>
             <div style="font-size:1.2em; "><b>德国Quadro授权的中国市场经销商，原装正品，在淘宝上进行交易，国内现货，发货迅速，有靠谱的售后。</b></div>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>限时优惠活动</b></div>
@@ -198,7 +198,7 @@
             <img src="4weixin.webp" style="display:inline-block;width:30%"/>
             <img src="1weixinqun.webp" style="display:inline-block;width:30%"/>
             <hr>
-
+            <div style="font-size:1.2em; "><b>如果链接失效，请私信告知领取新的链接，谢谢！。</b></div>
             <div class="yangmaochang" style="font-size:1.5em">
                 <span style="color:rgb(112,173,71)"><b>如何获取羊毛厂优惠？</b></span><br><br>
                 <div class="taobao"><span>8$Kmwe34zv7kO$:// CZ6135</span><br/><button onclick="clip(this)">复制淘口令</button></div>
@@ -219,11 +219,8 @@
         </div>
         <!--end of tab1-->
         <div class="tab-page">
-            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>限时优惠活动</b></div>
-            <p>暂无</p>
-
-            <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>羊毛厂专属优惠</b></div>
+            <div style="font-size:1.2em; "><b>大兽套装融合了EVO和Clup的优点并做了进一步优化，非常合适DIY，优惠力度很好，适合新手入门。<br>小兽套装比较小，但兼容性也不错，适合尝新。<br>羊毛包作为小扩展包可以无脑入，比例很合适。</b></div>
             <img src="2yangmao.webp" style="width:80%"/>
 
             <p>扫描二维码或微信界面下长按二维码进入快团团小程序购买</p>
