--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             top: 10vh;
             width: 80vw;
             height: 80vh;
-            background: #f1faf0;
+            background:#f8faf7;
             overflow-y: scroll;
             border: 2px solid grey;
         }
@@ -177,9 +177,9 @@
                 <a href="https://quadrotoys.com/?ref=cheryl"><span style="text-decoration:underline;font-size:1.5em;">北美Quadro官网：
                     </span></a>cheryl_usa_15
             </div>
-            <br><span style="font-size:1.8em;">扫码加微信了解更多优惠信息</span><br>
+            <br><span style="font-size:1.8em;">扫码加微信了解更多优惠信息</span>
             <img alt='wechat qrcode' style='object-fit: contain;max-width:80%;height:80%;' src='4weixin.webp'>
-            <br><span style="font-size:1.8em;">关注|羊毛厂|快团团 有更多惊喜美价物品分享</span><br>
+            <span style="font-size:1.8em;">关注|羊毛厂|快团团 有更多惊喜美价物品分享</span><br>
             <img alt='kuaituantuan qrcode' style='object-fit: contain;max-width:60%;height:60%;' src='1kttzy.webp'>
         </div>
     </div>
@@ -214,9 +214,8 @@
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>羊毛厂专属优惠</b></div>
             <img src="1taobao.webp" style="width:80%" />
-            <p>优惠价格详情，请咨询吞金兽驯兽师小红书<br>或使用下面二维码+驯兽师羊毛厂微信或群聊</p>
+            <p>优惠价格详情，请咨询吞金兽驯兽师小红书<br>或使用下面二维码+驯兽师羊毛厂微信</p>
             <img src="4weixin.webp" style="display:inline-block;width:30%" />
-            <img src="1weixinqun.webp" style="display:inline-block;width:30%" />
             <hr>
             <div style="font-size:1.2em; "><b>如果链接失效，请私信告知领取新的链接，谢谢！。</b></div>
             <div class="yangmaochang" style="font-size:1.5em">
