--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="description" content="羊毛厂">
     <meta name="keywords" content="攀爬架, 爬爬架, quadro, 吞金兽驯兽师，驯兽师羊毛厂">
     <meta name="apple-mobile-web-app-title" content="羊毛厂">
+    <meta name="google-site-verification" content="o7OyMXeaQLqCcWFLUIoRlUurThMOReYF_pQxd6HPh0Y" />
     <style>
         body {
             font-size: 24px;
