--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
                 <a href="https://quadrotoys.com/?ref=cheryl"><span style="text-decoration:underline;font-size:1.5em;">北美Quadro官网：
                     </span></a>cheryl_usa_15
             </div>
-            <br><span style="font-size:1.8em;">扫码加微信了解更多优惠信息</span>
-            <img alt='wechat qrcode' style='object-fit: contain;max-width:80%;height:80%;' src='4weixin.webp'>
+            <br><span style="font-size:1.8em;">扫码加微信了解更多优惠信息</span><br>
+            <img alt='wechat qrcode' style='object-fit: contain;max-width:80%;height:80%;' src='4weixin.webp'><br>
             <span style="font-size:1.8em;">关注|羊毛厂|快团团 有更多惊喜美价物品分享</span><br>
             <img alt='kuaituantuan qrcode' style='object-fit: contain;max-width:60%;height:60%;' src='1kttzy.webp'>
         </div>
