--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             <div style="font-size:1.2em; "><b>如果链接失效，请私信告知领取新的链接，谢谢！。</b></div>
             <div class="yangmaochang" style="font-size:1.5em">
                 <span style="color:rgb(112,173,71)"><b>如何获取羊毛厂优惠？</b></span><br><br>
-                <div class="taobao"><span>8$Kmwe34zv7kO$:// CZ6135</span><br /><button
+                <div class="taobao"><span>3$So0f35cjN09$:// CA1710</span><br /><button
                         onclick="clip(this)">复制淘口令</button></div>
                 <span style="color:rgb(112,173,71)">▼</span><br>
                 打开淘宝查看商品<br>
@@ -253,16 +253,15 @@
             <div class="taobao"><span>#小程序://快团团/iHVbB67txzMvnAi</span><br /><button
                     onclick="clip(this)">复制小程序链接</button></div>
             <hr>
-            <p>入群欢享“驯兽师羊毛厂”专属附加福利</p>
+            <p>入群|驯兽师羊毛厂|获得更多交流和搭建指引</p>
             <img src="4weixin.webp" style="display:inline-block;width:30%" />
-            <img src="1weixinqun.webp" style="display:inline-block;width:30%" />
         </div>
         <!--end of tab2-->
 
         <div class="tab-page">
             <div style="font-size:1.2em; "><b>玩法非常多样可以和爬架搭配使用，更推荐在室外玩！如果需要原版Staplestein玩法说明可以私信驯兽师</b></div>
             <img src="3shi.webp" style="width:50%" />
-            <div class="taobao"><span>7輹👋Zhi9(2zkU34zrAjB):// CA1831,打開/</span><br /><button
+            <div class="taobao"><span>9(HQMa35clh1V):// CZ3457</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
         </div>
         <!--end of tab3-->
@@ -270,7 +269,7 @@
         <div class="tab-page">
             <div style="font-size:1.2em; "><b>可以让单杠旋转起来很好玩，也适合抓握力一般的崽崽过度，绳子还可以用在别的元素上<br>请选择1m可调节款</b></div>
             <img src="4dangang.webp" style="width:40%" />
-            <div class="taobao"><span>0fu😄質0(T05434zIaYy):// MF3135,打開/</span><br /><button
+            <div class="taobao"><span>3(rVaW35cleph):// CZ3457</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
         </div>
         <!--end of tab4-->
@@ -279,21 +278,21 @@
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>尼龙绳</b></div>
             <div style="font-size:1.2em; "><b>做为吊桥的话5-6mm粗，10米均分成4段足够，还可以用来编织40x80的简易爬网</b></div>
             <img src="5sheng.webp" style="width:40%" />
-            <div class="taobao"><span>1fu😄質9(d8wB34AXUgY):// CZ3457,打開/</span><br /><button
+            <div class="taobao"><span>3(qDJf35cNyk5):// MF3135</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>弹力绳</b></div>
             <div style="font-size:1.2em; "><b>增加趣味性的话可以使用6mm粗的弹力绳来绑吊桥，做成蹦板</b></div>
             <img src="5tanli.webp" style="width:40%" />
-            <div class="taobao"><span>9覆👋ZHI2(QtFZ34ztJ7f):// CA1371,打開/</span><br /><button
+            <div class="taobao"><span>1(bmSF35cLfgb):// CA1831</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>自制爬网棉绳</b></div>
             <div style="font-size:1.2em;"><b>可以选择25mm的棉绳作为爬网，较粗踩起来比较舒服</b></div>
             <img src="5miansheng.webp" style="width:40%" />
-            <div class="taobao"><span>0Fu😊zhi2(ypMv34zGknd):// MF3106,打開/</span><br /><button
+            <div class="taobao"><span>3(E5bB35cox1F):// ZH9102</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
@@ -304,7 +303,7 @@
             <img src="5wang3.webp" style="display:inline-block;width:30%;height:80%" />
             <img src="5wang1.webp" style="display:inline-block;width:30%" />
             <img src="5wang2.webp" style="display:inline-block;width:30%" />
-            <div class="taobao"><span>6fu😄質3(X55W3erODBv):// CA1831,打開/</span><br /><button
+            <div class="taobao"><span>3(CYQ735cKMUh):// MF3106</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
         </div>
         <!--end of tab5-->
@@ -312,7 +311,7 @@
         <div class="tab-page">
             <div style="font-size:1.2em; "><b>Quadro是使用6cm直径的球装八分满2x2的40大板的球池，此链接是7cm的球200个左右足够半板球池</b></div>
             <img src="6haiyangqiu.webp" style="width:40%" />
-            <div class="taobao"><span>7輹👋Zhi4(749Q34zCxhe):// MF1001,打開/</span><br /><button
+            <div class="taobao"><span>6(K16535cKmYU):// CA1710</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
         </div>
         <!--end of tab6-->
@@ -321,21 +320,21 @@
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>软秋千</b></div>
             <div style="font-size:1.2em; "><b>适合小娃，样式方便收纳不占空间</b></div>
             <img src="7qiuqian1.webp" style="width:40%" />
-            <div class="taobao"><span>7輹👋Zhi4(wgmD34zBVtM):// CA1371,打開/</span><br /><button
+            <div class="taobao"><span>4(xFEQ35cr4X6):// CA1371</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>定型秋千</b></div>
             <div style="font-size:1.2em; "><b>小泰克适合小娃，很多小伙伴选择的款式，优点是定型，缺点是不方便收纳</b></div>
             <img src="7qiuqian3.webp" style="width:40%" />
-            <div class="taobao"><span>0Fu😊zhi6(CFox34zFyN1):// CA1710,打開/</span><br /><button
+            <div class="taobao"><span>0(D7NO35cIWqP):// CZ3457</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>板子秋千</b></div>
             <div style="font-size:1.2em; "><b>适合大娃，简单方便易收纳，也可以直接用15*35的半板搭建</b></div>
             <img src="7qiuqian2.webp" style="width:40%" />
-            <div class="taobao"><span>7覆👋ZHI3(L1q634zzjmj):// CZ6144,打開/</span><br /><button
+            <div class="taobao"><span>6(zGym35cIxA7):// HU7177</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
         </div>
         <!--end of tab7-->
@@ -344,13 +343,13 @@
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>Lego原版底板</b></div>
             <div style="font-size:1.2em; "><b>得宝Duplo大颗粒积木使用，可以使用纳米胶固定，如果是水平放置两侧有两个1左右的点就不会动了</b></div>
             <img src="8lego.webp" style="width:40%" />
-            <div class="taobao"><span>8覆👋ZHI5(0XCb34zEiGo):// CZ6144,打開/</span><br /><button
+            <div class="taobao"><span>9(fB4e35cstSm):// MF3106</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>平替底板，适配得宝</b></div>
             <img src="8jimuban.webp" style="width:40%" />
-            <div class="taobao"><span>8輹👋Zhi1(Dawc34zBHLp):// CZ3148,打開/</span><br /><button
+            <div class="taobao"><span>9(I3tv35csy6R):// CA1501</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
         </div>
         <!--end of tab8-->
@@ -359,7 +358,7 @@
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>适配方形箱子</b></div>
             <div style="font-size:1.2em; "><b>Vessla这个尺寸可以卡在35x35cm的框架里，带上盖子就可以收纳，这种塑料的更适合玩沙子做感观盆</b></div>
             <img src="9penzi.webp" style="width:40%" />
-            <div class="taobao"><span>5覆👋ZHI6(IwEh34zzMc7):// HU7177,打開/</span><br /><button
+            <div class="taobao"><span>4(2c8735cGu0C):// CA1501</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
@@ -367,14 +366,14 @@
             <div style="font-size:1.2em; "><b>xhs@慧慧为什么推荐(推荐理由：比较小巧，方便分类收纳，一个35方格可以放两个，比较矮有空位，方便宝贝自己拿取）</b></div>
             <img src="9shouna3.webp" style="display:inline-block;width:50%" />
             <img src="9shouna4.webp" style="display:inline-block;width:50%" />
-            <div class="taobao"><span>9Fu😊zhi6(YJCN34zxkAJ):// MU6304,打開/</span><br /><button
+            <div class="taobao"><span>2(iOYF35cuIZ9):// CZ3457</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.2em; "><b>推荐理由：尺寸比较严丝合缝，适合放需要防尘的物件，比如玩偶</b></div>
             <img src="9shouna5.webp" style="width:40%" />
             <img src="9shouna2.webp" style="width:40%" />
-            <div class="taobao"><span>8覆👋ZHI1(mbV234zCyXZ):// CZ3457,打開/</span><br /><button
+            <div class="taobao"><span>4(1z3Z35cuvp8):// ZH9102</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
         </div>
         <!--end of tab9-->
@@ -383,7 +382,7 @@
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>扎带</b></div>
             <div style="font-size:1.2em; "><b>尺寸请选择8x350x400 经典色请选择深蓝色/红色/黄色/绿色</b></div>
             <img src="10zhadai.webp" style="width:40%" />
-            <div class="taobao"><span>8fu😄質1(2kQj34zE72x):// MF3135,打開/</span><br /><button
+            <div class="taobao"><span>7(8YU535cuoyr):// MF3084/</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
@@ -391,7 +390,7 @@
             <div style="font-size:1.2em;"><b>在亚克力板上显色较为清楚，容易擦洗</b></div>
             <img src="10bi.webp" style="display:inline-block;width:40%" />
             <img src="10bi2.webp" style="display:inline-block;width:40%" />
-            <div class="taobao"><span>3覆👋ZHI8(vNYy34zDP3E):// MU6304,打開/</span><br /><button
+            <div class="taobao"><span>2(y3WI35cFQzT):// CA1371</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
         </div>
         <!--end of tab10-->
@@ -399,7 +398,7 @@
         <div class="tab-page">
             <div style="font-size:1.2em; "><b>请联系客服选择外径27mm,长度为78cm的铝管，4根是60元，6根是58元</b></div>
             <img src="11lvguan.webp" style="width:40%" />
-            <div class="taobao"><span>0Fu😊zhi7(NAfW34zwnUZ):// CA1831,打開/</span><br /><button
+            <div class="taobao"><span>3(w0Gb35cFiSO):// CA1710</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
         </div>
         <!--end of tab11-->
@@ -425,31 +424,31 @@
             <div style="font-size:1.2em; "><b>适配|吉祥如意小裁缝|洞洞板的配件</b></div>
             <img src="12pj1.webp" style="display:inline-block;width:18%" />
             <img src="12pj2.webp" style="display:inline-block;width:18%" />
-            <div class="taobao"><span>8覆👋ZHI9(3uWb3UNtYCg):// ZH9102,打開/</span><br /><button
+            <div class="taobao"><span>7(GgOA35cEgpD):// MF1001</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.2em; "><b>适配|哎哟妈呀|洞洞板的配件</b></div>
             <img src="12pj3.webp" style="width:40%" />
-            <div class="taobao"><span>8輹👋Zhi4(i4yx3UNtLoD):// CA1371,打開/</span><br /><button
+            <div class="taobao"><span>4(zyag35cDc3h):// HU7709</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.2em; "><b>木质磁性字母贴，需要自己把磁条贴上，但很简单</b></div>
             <img src="12dongdongban1.webp" style="width:40%" />
-            <div class="taobao"><span>1輹👋Zhi7(MHp634zwQ3o):// CA1710,打開/</span><br /><button
+            <div class="taobao"><span>9(1waF35cDoVm):// CZ3148</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.2em; "><b>吸力比较好的小可爱磁铁</b></div>
             <img src="12dongdongban3.webp" style="width:40%" />
-            <div class="taobao"><span>6fu😄質9(b6Xe34zEnw5):// MU5183,打開/</span><br /><button
+            <div class="taobao"><span>9(bMDh35cC7wE):// ZH9114</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.2em; "><b>车辆磁力贴，崽崽很喜欢，但单词翻译不是很完美</b></div>
             <img src="12dongdongban2.webp" style="width:40%" />
-            <div class="taobao"><span>7覆👋ZHI6(6nrQ34zEg8H):// HU7177,打開/</span><br /><button
+            <div class="taobao"><span>0(MX6335cxn63):// CZ6135</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
         </div>
         <!--end of tab12-->
@@ -458,16 +457,15 @@
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>纯棉地毯</b></div>
             <div style="font-size:1.2em; "><b>可以进洗衣机清洗，可以彻底清洁，好收纳，但缓冲相对差一些</b></div>
             <img src="13ditan1.webp" style="width:40%" />
-            <div class="taobao"><span>4fu😄質8(APN534ztrjo):// CA1371,打開/</span><br /><button
+            <div class="taobao"><span>2(K5H735cCXdQ):// ZH9102</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>曼龙地垫</b></div>
             <div style="font-size:1.2em; "><b>弹性很好，方便清洁，适合小娃，但不是很好收纳</b></div>
             <img src="13ditan2.webp" style="width:40%" />
-            <div style="font-size:1.2em; "><b>羊毛厂快团团价格更加美丽，别错过</b></div>
-            <div class="taobao"><span>6覆👋ZHI5(N80334ztJ3F):// MF3084,打開/</span><br /><button
-                    onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
+            <div style="font-size:1.2em; "><b>羊毛厂快团团价格很美丽，别错过</b></div>
+            <img alt='kuaituantuan qrcode' style='object-fit: contain;max-width:60%;height:60%;' src='1kttzy.webp'>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>东理地毯</b></div>
@@ -484,24 +482,17 @@
                     <br>2）可以用架子收纳自己也非常好装<br>xhs@王大哥推荐下面这个软性收纳，尺寸正好合适（#150，50*35*46cm），装接头的时候要稍微注意一下，有划破的可能，没有1688也可以淘宝上购买同牌同款但稍微贵一些</b>
             </div>
             <img src="14shouna.webp" style="width:40%" />
-            <a href="https://mindx.1688.com/tj/tuijian/2jdfz4NJxBEbxXWjFXZA/index.html?share_token=dey7B03ThDgne6N4GF+wETRQMYBzlFkuvqQSjBAMlf0C6nAi3fjXBw==&wh_pha=true&wh_pid=2794304&__pageId__=2794304&__existtitle__=1&awake_id=110&businessId=802636054650&__share_id=dd70a38f-ced4-4e75-a817-443ee42d00c7&currentPage=WAP_OFFER_DETAIL&__zhi_token=YaIMvma00rNaa&spm=a262eq.8992535/20240813.5103953.0&__removesafearea__=1&cbu_sv_id=17cd0ebd-d58c-486a-b058-9cdfd77628d0&visitorId=17cd0ebd-d58c-486a-b058-9cdfd77628d0&isVisited=true"
+            <a href="https://www.xiaohongshu.com/goods-detail/6640a11e9f9a970001d38595?instation_link=xhsdiscover%3A%2F%2Fgoods_detail%2F6640a11e9f9a970001d38595%3Ftrade_ext%3DeyJjaGFubmVsSW5mbyI6bnVsbCwiZHNUb2tlbkluZm8iOm51bGwsInNoYXJlTGluayI6Imh0dHBzOi8vd3d3LnhpYW9ob25nc2h1LmNvbS9nb29kcy1kZXRhaWwvNjY0MGExMWU5ZjlhOTcwMDAxZDM4NTk1P2FwcHVpZD01Y2E2NzA2ZDAwMDAwMDAwMTcwMTI5MDciLCJsaXZlSW5mbyI6bnVsbCwic2hvcEluZm8iOm51bGwsImdvb2RzTm90ZUluZm8iOm51bGwsImNoYXRJbmZvIjpudWxsfQ%3D%3D%26rn%3Dtrue&xhsshare=CopyLink&appuid=5ca6706d0000000017012907&apptime=1724797099"
                 target="_blank">
                 <span style="text-decoration:underline;font-size:1.8em;">点击打开1688链接</span>
             </a>
-            <br>
-            <div class="taobao"><span>7輹👋Zhi9(e6Lm3ermS8Z):// ZH9102,打開/</span><br /><button
-                    onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
         </div>
         <!--end of tab14-->
 
         <div class="tab-page">
-            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>原创作者xhs@娜娜和宝平欧巴的彩虹门</b></div>
-            <div style="font-size:1.2em; "><b>是非常受欢迎的一款周边单品。不想自己动手做的小伙伴可以直接入！<br>羊毛厂也争取到了一点点小福利，入群有详情。</b></div>
-            <img src="15rainbow3.webp" style="display:inline-block;width:18%" />
-            <img src="15rainbow1.webp" style="display:inline-block;width:18%" />
-            <img src="15rainbow4.webp" style="display:inline-block;width:18%" />
-            <img src="15rainbow2.webp" style="display:inline-block;width:18%" />
-            <img src="15rainbow5.webp" style="display:inline-block;width:18%" />
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>彩虹门</b></div>
+            <div style="font-size:1.2em; "><b>原创作者|xhs@娜娜和宝平欧巴|的彩虹门是一款颜值在线，非常受欢迎的一款周边单品。不想自己动手做的小伙伴可以直接入！<br>羊毛厂也争取到了一点点小福利，入群有详情。</b></div>
+            <img src="15rainbow.webp" style="width:40%" />
             <br>
             <a href="https://www.xiaohongshu.com/goods-detail/663bb5fbd0faa80001b3dd95?instation_link=xhsdiscover%3A%2F%2Fgoods_detail%2F663bb5fbd0faa80001b3dd95%3Ftrade_ext%3DeyJjaGFubmVsSW5mbyI6bnVsbCwiZHNUb2tlbkluZm8iOm51bGwsInNoYXJlTGluayI6Imh0dHBzOi8vd3d3LnhpYW9ob25nc2h1LmNvbS9nb29kcy1kZXRhaWwvNjYzYmI1ZmJkMGZhYTgwMDAxYjNkZDk1P2FwcHVpZD01Y2E2NzA2ZDAwMDAwMDAwMTcwMTI5MDciLCJsaXZlSW5mbyI6bnVsbCwic2hvcEluZm8iOm51bGwsImdvb2RzTm90ZUluZm8iOm51bGx9%26rn%3Dtrue&xhsshare=CopyLink&appuid=5ca6706d0000000017012907&apptime=1723708760"
                 target="_blank">
