--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
                     <br>2）可以用架子收纳自己也非常好装<br>xhs@王大哥推荐下面这个软性收纳，尺寸正好合适（#150，50*35*46cm），装接头的时候要稍微注意一下，有划破的可能，没有1688也可以淘宝上购买同牌同款但稍微贵一些</b>
             </div>
             <img src="14shouna.webp" style="width:40%" />
-            <a href="https://mindx.1688.com/tj/tuijian/2jdfz4NJxBEbxXWjFXZA/index.html?share_token=dey7B03ThDgne6N4GF+wETRQMYBzlFkuvqQSjBAMlf0C6nAi3fjXBw==&wh_pha=true&wh_pid=2794304&__pageId__=2794304&__existtitle__=1&awake_id=110&businessId=802636054650&__share_id=dd70a38f-ced4-4e75-a817-443ee42d00c7&currentPage=WAP_OFFER_DETAIL&__zhi_token=YaIMvma00rNaa&spm=a262eq.8992535/20240813.5103953.0&__removesafearea__=1&cbu_sv_id=17cd0ebd-d58c-486a-b058-9cdfd77628d0&visitorId=17cd0ebd-d58c-486a-b058-9cdfd77628d0&isVisited=true"
+            <a href="https://detail.1688.com/offer/802636054650.html"
                 target="_blank">
                 <span style="text-decoration:underline;font-size:1.8em;">点击打开1688链接</span>
             </a>
@@ -494,7 +494,7 @@
             <div style="font-size:1.2em; "><b>原创作者|xhs@娜娜和宝平欧巴|的彩虹门是一款颜值在线，非常受欢迎的一款周边单品。不想自己动手做的小伙伴可以直接入！<br>羊毛厂也争取到了一点点小福利，入群有详情。</b></div>
             <img src="15rainbow.webp" style="width:40%" />
             <br>
-            <a href="https://www.xiaohongshu.com/goods-detail/663bb5fbd0faa80001b3dd95?instation_link=xhsdiscover%3A%2F%2Fgoods_detail%2F663bb5fbd0faa80001b3dd95%3Ftrade_ext%3DeyJjaGFubmVsSW5mbyI6bnVsbCwiZHNUb2tlbkluZm8iOm51bGwsInNoYXJlTGluayI6Imh0dHBzOi8vd3d3LnhpYW9ob25nc2h1LmNvbS9nb29kcy1kZXRhaWwvNjYzYmI1ZmJkMGZhYTgwMDAxYjNkZDk1P2FwcHVpZD01Y2E2NzA2ZDAwMDAwMDAwMTcwMTI5MDciLCJsaXZlSW5mbyI6bnVsbCwic2hvcEluZm8iOm51bGwsImdvb2RzTm90ZUluZm8iOm51bGx9%26rn%3Dtrue&xhsshare=CopyLink&appuid=5ca6706d0000000017012907&apptime=1723708760"
+            <a href="https://www.xiaohongshu.com/goods-detail/6640a11e9f9a970001d38595"
                 target="_blank">
                 <span style="text-decoration:underline;font-size:1.8em;">点击打开小红书购买链接</span>
             </a>
