--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
 
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>商家介绍</b></div>
             <div style="font-size:1.2em; "><b>德国Quadro授权的中国市场经销商，原装正品，在淘宝上进行交易，国内现货，发货迅速，有靠谱的售后。</b></div>
-            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>限时优惠活动</b></div>
-            暂无
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>中秋节限时优惠活动</b></div>
+            <img src="1taobao2.webp" style="width:80%" />
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>羊毛厂专属优惠</b></div>
             <img src="1taobao.webp" style="width:80%" />
