--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>Lego原版底板</b></div>
             <div style="font-size:1.2em; "><b>得宝Duplo大颗粒积木使用，可以使用纳米胶固定，如果是水平放置两侧有两个1左右的点就不会动了</b></div>
             <img src="8lego.webp" style="width:40%" />
-            <div class="taobao"><span>9(fB4e35cstSm):// MF3106</span><br /><button
+            <div class="taobao"><span>3(kS8n3S08RCq):// CZ6144</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
