--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
         <div class="tab-btn" onclick="showTab(12)">选品13<br>地垫</div>
         <div class="tab-btn" onclick="showTab(13)">选品14<br>配件收纳</div>
         <div class="tab-btn" onclick="showTab(14)">选品15<br>彩虹门</div>
+        <div class="tab-btn" onclick="showTab(15)">其他好物分享</div>
     </div>
     <div class="tab-page-area">
         <div class="tab-page active">
@@ -248,9 +249,11 @@
 
             <p>扫描二维码或微信界面下长按二维码进入快团团小程序购买</p>
             <img src="2kuaituantuan2.webp" style="width:30%" />
-            <p>或复制以下链接，发送微信信息给自己后打开</p>
-            <div class="taobao"><span>#小程序://快团团/iHVbB67txzMvnAi</span><br /><button
-                    onclick="clip(this)">复制小程序链接</button></div>
+            <br>
+            <a href="https://ktt.pinduoduo.com/t/Xz4AEvcJ1A"
+                 target="_blank">
+                <span style="text-decoration:underline;font-size:1.8em;">或点击打开快团团链接</span>
+            </a>
             <hr>
             <p>入群|驯兽师羊毛厂|获得更多交流和搭建指引</p>
             <img src="4weixin.webp" style="display:inline-block;width:30%" />
@@ -385,6 +388,13 @@
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>管道玩具</b></div>
+            <div style="font-size:1.2em;"><b>亚克力洞洞板（孔径6cm）上可以使用</b></div>
+            <img src="10gundao.webp" style="display:inline-block;width:40%" />
+            <div class="taobao"><span>6(22T53RPHyhq):// CA1710</span><br /><button
+                    onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
+            <br>
+            <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>玻璃蜡笔</b></div>
             <div style="font-size:1.2em;"><b>在亚克力板上显色较为清楚，容易擦洗</b></div>
             <img src="10bi.webp" style="display:inline-block;width:40%" />
@@ -464,7 +474,10 @@
             <div style="font-size:1.2em; "><b>弹性很好，方便清洁，适合小娃，但不是很好收纳</b></div>
             <img src="13ditan2.webp" style="width:40%" />
             <div style="font-size:1.2em; "><b>羊毛厂快团团价格很美丽，别错过</b></div>
-            <img alt='kuaituantuan qrcode' style='object-fit: contain;max-width:60%;height:60%;' src='1kttzy.webp'>
+            <a href="https://ktt.pinduoduo.com/t/4cL5o092Ic"
+                target="_blank">
+                <span style="text-decoration:underline;font-size:1.8em;">点击打开快团团链接</span>
+            </a>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>东理地毯</b></div>
@@ -503,7 +516,40 @@
             <img src="1weixinqun.webp" style="display:inline-block;width:30%" />
         </div>
         <!--end of tab15-->
-        
+        <div class="tab-page">
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>小泰克厨房三大金刚</b></div>
+            <div style="font-size:1.2em; "><b>xhs@慧慧为什么推荐</b></div>
+            <img src="9shouna3.webp" style="display:inline-block;width:50%" />
+            <div class="taobao"><span>6(vaRf3Rkzihw):// CZ6144</span><br /><button
+                    onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
+            <br>
+            <br>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>Bike8平衡车</b></div>
+            <div style="font-size:1.2em; "><b>很轻便，减震效果好，非竞赛类的选择元气系列就足够</b></div>
+            <img src="15bike8.webp" style="display:inline-block;width:50%" />
+             <a href="https://ktt.pinduoduo.com/t/Xz4AEvcJ1A"
+                 target="_blank">
+                <span style="text-decoration:underline;font-size:1.8em;">点击打开快团团链接</span>
+            </a>
+            <br>
+            <br>
+            <div class="tab-page">
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>美朵嘉蚊帐</b></div>
+            div style="font-size:1.2em; "><b>全包蚊帐，质量不错抗造，售后服务也很好，南方必备</b></div><
+            <img src="15wenz.webp" style="display:inline-block;width:50%" />
+            <div class="taobao"><span>1(aEsi3RPNXrp):// ZH9114</span><br /><button
+                    onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
+            <br>
+            <br>
+            <div class="tab-page">
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>睿思重力轨道球</b></div>
+            div style="font-size:1.2em; "><b>开放性STEM玩具，可以直接入经典版，亚马逊也可以买到少儿版</b></div><
+            <img src="15zhongliqiu.webp" style="display:inline-block;width:50%" />
+            <div class="taobao"><span>0(tNqZ3RPqcin):// CA1501</span><br /><button
+                    onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
+        </div>
+        <!--end of tab16-->
+
     </div>
 </body>
 
