--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         <div class="tab-btn" onclick="showTab(12)">选品13<br>地垫</div>
         <div class="tab-btn" onclick="showTab(13)">选品14<br>配件收纳</div>
         <div class="tab-btn" onclick="showTab(14)">选品15<br>彩虹门</div>
-        <div class="tab-btn" onclick="showTab(15)">其他好物分享</div>
+        <div class="tab-btn" onclick="showTab(15)">更多...<br>其他好物分享</div>
     </div>
     <div class="tab-page-area">
         <div class="tab-page active">
