--- a/index.html
+++ b/index.html
@@ -534,14 +534,14 @@
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>美朵嘉蚊帐</b></div>
-            div style="font-size:1.2em; "><b>全包蚊帐，质量不错抗造，售后服务也很好，南方必备</b></div><
+            <div style="font-size:1.2em; "><b>全包蚊帐，质量不错抗造，售后服务也很好，南方必备</b></div><
             <img src="15wenz.webp" style="display:inline-block;width:50%" />
             <div class="taobao"><span>1(aEsi3RPNXrp):// ZH9114</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>睿思重力轨道球</b></div>
-            div style="font-size:1.2em; "><b>开放性STEM玩具，可以直接入经典版，亚马逊也可以买到少儿版</b></div><
+            <div style="font-size:1.2em; "><b>开放性STEM玩具，可以直接入经典版，亚马逊也可以买到少儿版</b></div><
             <img src="15zhongliqiu.webp" style="display:inline-block;width:50%" />
             <div class="taobao"><span>0(tNqZ3RPqcin):// CA1501</span><br /><button
                     onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
